--- a/src/main/resources/assets/medieval_instruments_/lang/en_us.json
+++ b/src/main/resources/assets/medieval_instruments_/lang/en_us.json
@@ -3,7 +3,7 @@
   "item.medieval_instruments_.demircubuk": "Demircubuk",
   "block.medieval_instruments_.yakutblock": "Yakutblock",
   "block.medieval_instruments_.floritblock": "Floritblock",
-  "item.medieval_instruments_.floritsword": "Floritsword",
+  "item.medieval_instruments_.floritsword": "waterelementsword ",
   "item.medieval_instruments_.linyit": "Linyit",
   "item.medieval_instruments_.akuamarinring": "Akuamarinring",
   "item.medieval_instruments_.metalring": "Metalring",
