--- a/src/main/resources/assets/medieval_instruments_/lang/en_us.json
+++ b/src/main/resources/assets/medieval_instruments_/lang/en_us.json
@@ -9,8 +9,10 @@
   "item.medieval_instruments_.metalring": "Metalring",
   "block.medieval_instruments_.linyitblock": "Linyitblock",
   "item.medieval_instruments_.akuamarin": "Akuamarin",
+  "item.medieval_instruments_.grample": "Grample İngot",
   "item.medieval_instruments_.yakutring": "Yakutring",
   "item.medieval_instruments_.florit": "Florit",
+  "block.medieval_instruments_.grampleore": "Grample Ore",
   "item.medieval_instruments_.yakut": "Yakut",
   "item.medieval_instruments_.arrowfire": "Arrowfire"
 }
