--- a/src/main/resources/assets/medieval_instruments_/lang/en_us.json
+++ b/src/main/resources/assets/medieval_instruments_/lang/en_us.json
@@ -14,5 +14,6 @@
   "item.medieval_instruments_.florit": "Florit",
   "block.medieval_instruments_.grampleore": "Grample Ore",
   "item.medieval_instruments_.yakut": "Yakut",
+  "item.medieval_instruments_.gramplecubuk": "Gramplecubuk",
   "item.medieval_instruments_.arrowfire": "Arrowfire"
 }
